# m4_ocr

./: Makefile  README.md  main.py  pyproject copy.toml  pyproject.toml  setup.py
docs/: M4_Support_de_présentation_TechNova_Attrition.pptx  Makefile  conf.py  index.rst  make.bat
models/V1/: Baseline_Aleatoire.joblib  CatBoost_Elite.joblib  Random_Forest.joblib  Regression_Logistique.joblib  XGBoost_Advanced.joblib
models/V2/: 0_BEST_MODEL_PACK.joblib  Baseline_Dummy.joblib  GradientBoosting.joblib  LogisticReg_Balanced.joblib  RandomForest_Balanced.joblib  XGBoost_Scaled.joblib  split_data_attrition.joblib
notebooks/: 01_RC_EDA_Nettoyage.ipynb  02_RC_Feature_Engineering.ipynb  03_RC_Modelisation.ipynb  04_RC_Modelisation_V2.ipynb  05_RC_Interpretation_SHAP.ipynb  ClassificationModeler.py  DataCleaner.py  P2_02_industrialisation_psql_ingestion.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
reports/: report_extrait_eval.html  report_extrait_sirh.html  report_extrait_sondage.html
src/: database.py
src/features/: build_features.py  create_features_view.sql
src/models/: predict_model.py
